--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <h1 class="text-3xl text-custom-DarkGrayishBlue mb-6">Our Pricing</h1>
     <div class="flex items-center justify-center flex-row text-lg text-custom-GrayishBlue gap-3">
       <p>Annually</p>
-      <button id="Annual-Button" class="text-4xl text-custom-Grad2"><i class="fa-solid fa-toggle-on"></i></button>
+      <label class="relative inline-flex items-center cursor-pointer">
+        <input type="checkbox" value="" class="sr-only peer">
+        <div class="w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-blue-300 dark:peer-focus:ring-custom-Grad2 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-gradient-to-r from-custom-Grad1 to-custom-Grad2"></div>
+      </label>
       <p>Monthly</p>
     </div>
   </header>
@@ -21,7 +24,7 @@
   <div class="flex items-center justify-center flex-col w-full lg:w-11/12 gap-14 lg:flex-row lg:gap-0">
     <section class="section">
       <h1 class="h1-1">Basic</h1>
-      <p id="Basic-Price" class="p1-1">&dollar;19.99</p>
+      <p id="Basic-Price" class="p1-1">&dollar;199.99</p>
       <p class="p1-2">500 GB Storage</p>
       <p class="p1-2">2 Users Allowed</p>
       <p class="p1-2">Send up to 3 GB</p>
@@ -30,7 +33,7 @@
   
     <section class="flex items-center justify-center flex-col text-lg w-11/12 lg:w-6/12 lg:h-[35rem] rounded-xl bg-gradient-to-r from-custom-Grad1 to-custom-Grad2">
       <h1 class="text-white text-xl p-5 border-b-custom-DarkGrayishBlue">Professional</h1>
-      <p id="Professional-Price" class="text-white text-5xl pt-5 pb-8 border-b-2 w-11/12 text-center">&dollar;24.99</p>
+      <p id="Professional-Price" class="text-white text-5xl pt-5 pb-8 border-b-2 w-11/12 text-center">&dollar;249.99</p>
       <p class="text-white p-5 border-b-2 w-11/12 text-center">1 TB Storage</p>
       <p class="p1-3">5 Users Allowed</p>
       <p class="p1-3">Send up to 10 GB</p>
@@ -39,7 +42,7 @@
   
     <section class="section">
       <h1 class="h1-1">Master</h1>
-      <p id="Master-Price" class="p1-1">&dollar;39.99</p>
+      <p id="Master-Price" class="p1-1">&dollar;399.99</p>
       <p class="p1-2">2 TB Storage</p>
       <p class="p1-2">10 Users Allowed</p>
       <p class="p1-2">Send up to 20 GB</p>
