--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <p>Annually</p>
       <label class="relative inline-flex items-center cursor-pointer">
         <input type="checkbox" value="" class="sr-only peer">
-        <div class="w-11 h-6 bg-gradient-to-r from-custom-Grad1 to-custom-Grad2  rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-gradient-to-r from-custom-Grad1 to-custom-Grad2"></div>
+        <div class="w-11 h-6 bg-custom-Grad2 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-gradient-to-r from-custom-Grad1 to-custom-Grad2"></div>
       </label>
       <p>Monthly</p>
     </div>
