--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@800&family=Montserrat:wght@700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/212fe58092.js" crossorigin="anonymous"></script>
 </head>
-<body class="flex items-center justify-center flex-col font-Montserrat text-base bg-custom-VeryLightGrayishBlue gap-14 mb-20">
+<body class="flex items-center justify-center flex-col font-Montserrat text-base bg-custom-VeryLightGrayishBlue gap-14 mb-20 bg-top-pattern bg-no-repeat bg-[left_12rem_top_-3rem] lg:bg-right-top">
   <header class="flex items-center justify-center flex-col p-10 pb-2">
     <h1 class="text-3xl text-custom-DarkGrayishBlue mb-6">Our Pricing</h1>
     <div class="flex items-center justify-center flex-row text-lg text-custom-GrayishBlue gap-3">
